@@ -37,9 +37,9 @@ locales.size > 0 %][% FOREACH locale = locales %][% locale.name %][%-
     <link rel="stylesheet" href="[% config.static_url %]openguides-base.css" type="text/css" title="Basic OpenGuides stylesheet" />
   [% END %]
   [% IF config.use_leaflet %]
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
     <!--[if lte IE 8]>
-      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.ie.css" />
+      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
     <![endif]-->
   [% END %]
 
@@ -79,7 +79,7 @@ locales.size > 0 %][% FOREACH locale = locales %][% locale.name %][%-
       <script
          src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"
          type="text/javascript"></script>
-      <script src="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.js"
+      <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"
               type="text/javascript"></script>
       <script src="[% config.static_url %]map-leaflet.js"
               type="text/javascript"></script>
